Закончена реализация периодического выполнения заказов, сделан вывод лога в интерфейс пользователя

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -5,6 +5,13 @@
 
 .reloadTableButton {
     font-size: 7pt;
+}
+
+#userContainer .reloadTableButton {
+    display:none;
+}
+
+#logContainer .reloadTableButton {
     display:none;
 }
 
